@@ -20,6 +20,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
 USA.
 */
 
+#define _BSD_SOURCE 1		       /* to get strtoll */
 #include "config.h"
 
 #include <stdlib.h>
