@@ -24,6 +24,7 @@
 
 /*{{{ Include Files */
 
+#define _BSD_SOURCE 1		       /* to get struct ip_mreq */
 #include "config.h"
 #include <stdio.h>
 #include <string.h>
